Name:           Custard
Version:        99.99
Synopsis:       A MUD driver
Description:    A MUD driver for Haskell

Author:         Martijn van Steenbergen
Maintainer:     martijn@van.steenbergen.nl
Copyright:      Copyright (c) 2008 Martijn van Steenbergen
Homepage:       http://martijn.van.steenbergen.nl/projects/custard/

Cabal-Version:  >= 1.2
License:        BSD3
License-file:   LICENSE
Category:       Network
Build-type:     Simple

Executable "custard"
  Build-Depends:    base >= 4 && < 5,
                    network >= 2.2 && < 2.3,
                    containers >= 0.2 && < 0.3,
                    data-accessor == 0.1.4,
                    mtl >= 1.1 && < 1.2,
                    parsec >= 3.0 && < 3.1,
                    regex-posix >= 0.72 && < 0.73,
                    data-accessor-template >= 0.2 && < 0.3
  Main-Is:          Main.hs
