Name:           Custard
Version:        99.99
Synopsis:       A MUD driver
Description:    A MUD driver for Haskell

Author:         Martijn van Steenbergen
Maintainer:     martijn@van.steenbergen.nl
Copyright:      Copyright (c) 2008 Martijn van Steenbergen
Homepage:       http://martijn.van.steenbergen.nl/projects/custard/

Cabal-Version:  >= 1.8
License:        BSD3
License-file:   LICENSE
Category:       Network
Build-type:     Simple

Executable "custard"
  Build-Depends:    base >= 4 && < 5,
                    network >= 2.4 && < 2.5,
                    containers >= 0.2 && < 0.6,
                    data-accessor >= 0.2 && < 0.3,
                    mtl >= 2.1 && < 2.2,
                    parsec >= 3.0 && < 3.2,
                    regex-posix >= 0.72 && < 0.96,
                    data-accessor-template >= 0.2 && < 0.3
  Main-Is:          Main.hs
